# docTR-Labeler

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: builds.yml  main.yml  publish.yml  style.yml
labeler/: __init__.py  logger.py
labeler/automation/: __init__.py  auto_labeler.py  tight_box.py
labeler/cli/: main.py
labeler/components/: __init__.py  draw_poly.py  polygon.py
labeler/custom_widgets/: searchable_combobox.py
labeler/utils/: __init__.py  data_utils.py  hub_factory.py
labeler/views/: __init__.py  canvas.py  gui.py
tests/: conftest.py
tests/common/: test_autolabel.py  test_canvas.py  test_draw_poly.py  test_gui.py  test_headers.py  test_polygon.py  test_searchable_combobox.py  test_startup.py  test_tight_box.py  test_utils_data.py  test_utils_hub.py
